[project]
name = "comfyui_flipstreamviewer"
description = "ComfyUI_FlipStreamViewer is a tool that provides a customizable viewer interface for flipping images with frame interpolation."
version = "3.1.0"
license = {file = "LICENSE.txt"}

[project.urls]
Repository = "https://github.com/sakura1bgx/ComfyUI_FlipStreamViewer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "sakura1bgx"
DisplayName = "ComfyUI_FlipStreamViewer"
Icon = ""
